@@ -350,7 +350,7 @@ $pan-&gt;API_load_from_candidate();</p>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_findOrCreateConnectorFromHost">#</a>
-		<code><b>findOrCreateConnectorFromHost</b>( <span>string <var>$host</var></span>, <span>string <var>$apiKey</var> = <span class="php-keyword1">null</span></span>, <span>boolean <var>$promptForKey</var> = <span class="php-keyword1">TRUE</span></span>, <span>boolean <var>$checkConnectivity</var> = <span class="php-keyword1">TRUE</span></span> )</code>
+		<code><b>findOrCreateConnectorFromHost</b>( <span>string <var>$host</var></span>, <span>string <var>$apiKey</var> = <span class="php-keyword1">null</span></span>, <span>boolean <var>$promptForKey</var> = <span class="php-keyword1">TRUE</span></span>, <span>boolean <var>$checkConnectivity</var> = <span class="php-keyword1">TRUE</span></span>, <span>boolean <var>$hiddenPW</var> = <span class="php-keyword1">FALSE</span></span> )</code>
 
 		<div class="description short">
 			
@@ -370,6 +370,8 @@ $pan-&gt;API_load_from_candidate();</p>
 					<dd><code>boolean</code><br>$promptForKey</dd>
 					<dt><var>$checkConnectivity</var></dt>
 					<dd><code>boolean</code><br>$checkConnectivity</dd>
+					<dt><var>$hiddenPW</var></dt>
+					<dd><code>boolean</code><br>$hiddenPW</dd>
 				</dl></div>
 
 				<h4>Returns</h4>
