@@ -1690,7 +1690,36 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_API_getServiceStats">#</a>
-		<code><b>API_getServiceStats</b>( <span>mixed <var>$timePeriod</var></span>, <span>mixed <var>$specificApps</var> = <span class="php-keyword1">null</span></span> )</code>
+		<code><b>API_getServiceStats</b>( <span>mixed <var>$timePeriod</var> = <span class="php-quote">'last-30-days'</span></span>, <span>mixed <var>$fastMode</var> = <span class="php-keyword1">true</span></span>, <span>mixed <var>$limit</var> = <span class="php-num">50</span></span>, <span>mixed <var>$specificApps</var> = <span class="php-keyword1">null</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="API_getAddressStats" id="_API_getAddressStats">
+
+		<td class="attributes"><code>
+			 public 
+			
+			&amp;
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_API_getAddressStats">#</a>
+		<code><b>API_getAddressStats</b>( <span>mixed <var>$timePeriod</var> = <span class="php-quote">'last-30-days'</span></span>, <span>mixed <var>$srcORdst</var> = <span class="php-quote">'src'</span></span>, <span>mixed <var>$fastMode</var> = <span class="php-keyword1">true</span></span>, <span>mixed <var>$limit</var> = <span class="php-num">50</span></span>, <span>mixed <var>$excludedAddresses</var> = <span class="php-keyword1">Array</span>()</span> )</code>
 
 		<div class="description short">
 			
