@@ -223,7 +223,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#___construct">#</a>
-		<code><b>__construct</b>( <span>mixed <var>$name</var></span>, <span>mixed <var>$owner</var> = <span class="php-keyword1">null</span></span> )</code>
+		<code><b>__construct</b>( <span>mixed <var>$name</var></span>, <span>mixed <var>$owner</var> = <span class="php-keyword1">null</span></span>, <span>mixed <var>$fromTemplateXml</var> = <span class="php-keyword1">false</span></span> )</code>
 
 		<div class="description short">
 			
@@ -1048,6 +1048,44 @@ their members inserted<br />
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="hasNamedObjectRecursive" id="_hasNamedObjectRecursive">
+
+		<td class="attributes"><code>
+			 public 
+			boolean
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_hasNamedObjectRecursive">#</a>
+		<code><b>hasNamedObjectRecursive</b>( <span>string <var>$objectName</var></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$objectName</var></dt>
+					<dd><code>string</code><br>$objectName</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	<tr data-order="removeAll" id="_removeAll">
 
 		<td class="attributes"><code>
@@ -1206,6 +1244,50 @@ their members inserted<br />
 		<td class="value"><code></code></td>
 		<td class="description"><div>
 			<a href="#$tags" class="anchor">#</a>
+
+			<div class="description short">
+				
+			</div>
+
+			<div class="description detailed hidden">
+				
+
+			</div>
+		</div></td>
+	</tr>
+	<tr data-order="templatexml" id="$templatexml">
+		<td class="attributes"><code>
+			protected static 
+			string
+		</code></td>
+
+		<td class="name">
+<var>$templatexml</var>		</td>
+		<td class="value"><code><span class="php-quote">'&lt;entry name=&quot;**temporarynamechangeme**&quot;&gt;&lt;members&gt;&lt;/members&gt;&lt;/entry&gt;'</span></code></td>
+		<td class="description"><div>
+			<a href="#$templatexml" class="anchor">#</a>
+
+			<div class="description short">
+				
+			</div>
+
+			<div class="description detailed hidden">
+				
+
+			</div>
+		</div></td>
+	</tr>
+	<tr data-order="templatexmlroot" id="$templatexmlroot">
+		<td class="attributes"><code>
+			protected static 
+			mixed
+		</code></td>
+
+		<td class="name">
+<var>$templatexmlroot</var>		</td>
+		<td class="value"><code><span class="php-keyword1">null</span></code></td>
+		<td class="description"><div>
+			<a href="#$templatexmlroot" class="anchor">#</a>
 
 			<div class="description short">
 				
