@@ -943,6 +943,44 @@ useful when looking to compare similar rules.</p>
 		</div>
 		</div></td>
 	</tr>
+	<tr data-order="hasNamedObjectRecursive" id="_hasNamedObjectRecursive">
+
+		<td class="attributes"><code>
+			 public 
+			boolean
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_hasNamedObjectRecursive">#</a>
+		<code><b>hasNamedObjectRecursive</b>( <span>string <var>$objectName</var></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$objectName</var></dt>
+					<dd><code>string</code><br>$objectName</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
 	<tr data-order="includesStoreExpanded" id="_includesStoreExpanded">
 
 		<td class="attributes"><code>
