@@ -250,7 +250,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_load_services_from_domxml">#</a>
-		<code><b>load_services_from_domxml</b>( <span>mixed <var>$xml</var></span> )</code>
+		<code><b>load_services_from_domxml</b>( <span><code><a href="class-DOMElement.html">DOMElement</a></code> <var>$xml</var></span> )</code>
 
 		<div class="description short">
 			
@@ -260,6 +260,11 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$xml</var></dt>
+					<dd><code><code><a href="class-DOMElement.html">DOMElement</a></code></code><br>$xml</dd>
+				</dl></div>
 
 
 
@@ -279,7 +284,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_all">#</a>
-		<code><b>all</b>( )</code>
+		<code><b>all</b>( <span>boolean <var>$sortByDependencies</var> = <span class="php-keyword1">false</span></span> )</code>
 
 		<div class="description short">
 			
@@ -289,6 +294,11 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$sortByDependencies</var></dt>
+					<dd><code>boolean</code><br>$sortByDependencies</dd>
+				</dl></div>
 
 				<h4>Returns</h4>
 				<div class="list">
@@ -345,7 +355,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_serviceGroups">#</a>
-		<code><b>serviceGroups</b>( )</code>
+		<code><b>serviceGroups</b>( <span>mixed <var>$sortByDependencies</var> = <span class="php-keyword1">true</span></span> )</code>
 
 		<div class="description short">
 			
@@ -362,6 +372,10 @@
 				</div>
 
 
+				<h4>Var</h4>
+				<div class="list">
+						bool $sortByDependencies<br />
+				</div>
 
 
 		</div>
@@ -569,7 +583,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_find">#</a>
-		<code><b>find</b>( <span>string <var>$fn</var></span>, <span>null <var>$ref</var> = <span class="php-keyword1">null</span></span>, <span>boolean <var>$nested</var> = <span class="php-keyword1">true</span></span>, <span>string <var>$type</var> = <span class="php-quote">''</span></span> )</code>
+		<code><b>find</b>( <span>string <var>$objectName</var></span>, <span>null <var>$ref</var> = <span class="php-keyword1">null</span></span>, <span>boolean <var>$nested</var> = <span class="php-keyword1">true</span> </span> )</code>
 
 		<div class="description short">
 			
@@ -581,14 +595,12 @@
 
 				<h4>Parameters</h4>
 				<div class="list"><dl>
-					<dt><var>$fn</var></dt>
-					<dd><code>string</code><br>$fn</dd>
+					<dt><var>$objectName</var></dt>
+					<dd><code>string</code><br>$objectName</dd>
 					<dt><var>$ref</var></dt>
 					<dd><code>null</code><br>$ref</dd>
 					<dt><var>$nested</var></dt>
 					<dd><code>boolean</code><br>$nested</dd>
-					<dt><var>$type</var></dt>
-					<dd><code>string</code><br>$type</dd>
 				</dl></div>
 
 				<h4>Returns</h4>
@@ -733,7 +745,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_API_remove">#</a>
-		<code><b>API_remove</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$s</var></span>, <span>mixed <var>$cleanInMemory</var> = <span class="php-keyword1">false</span></span> )</code>
+		<code><b>API_remove</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$s</var></span>, <span>boolean <var>$cleanInMemory</var> = <span class="php-keyword1">false</span></span> )</code>
 
 		<div class="description short">
 			
@@ -748,7 +760,7 @@
 					<dt><var>$s</var></dt>
 					<dd><code><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br>$s</dd>
 					<dt><var>$cleanInMemory</var></dt>
-					<dd></dd>
+					<dd><code>boolean</code><br>$cleanInMemory</dd>
 				</dl></div>
 
 				<h4>Returns</h4>
@@ -824,14 +836,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			
+			boolean
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_add">#</a>
-		<code><b>add</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$s</var></span>, <span>boolean <var>$rewritexml</var> = <span class="php-keyword1">true</span></span> )</code>
+		<code><b>add</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$s</var></span>, <span>boolean <var>$rewriteXml</var> = <span class="php-keyword1">true</span></span> )</code>
 
 		<div class="description short">
 			
@@ -845,10 +857,14 @@
 				<div class="list"><dl>
 					<dt><var>$s</var></dt>
 					<dd><code><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br>$s</dd>
-					<dt><var>$rewritexml</var></dt>
-					<dd><code>boolean</code><br>$rewritexml</dd>
+					<dt><var>$rewriteXml</var></dt>
+					<dd><code>boolean</code><br>$rewriteXml</dd>
 				</dl></div>
 
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
 
 				<h4>Throws</h4>
 				<div class="list">
@@ -922,14 +938,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			
+			<code><a href="class-Service.html">Service</a></code>
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_newService">#</a>
-		<code><b>newService</b>( <span>mixed <var>$name</var></span>, <span>mixed <var>$protocol</var></span>, <span>mixed <var>$destinationPorts</var></span> )</code>
+		<code><b>newService</b>( <span>mixed <var>$name</var></span>, <span>mixed <var>$protocol</var></span>, <span>mixed <var>$destinationPorts</var></span>, <span>mixed <var>$description</var> = <span class="php-quote">''</span></span> )</code>
 
 		<div class="description short">
 			
@@ -939,7 +955,162 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$name</var></dt>
+					<dd><code>mixed</code><br>$name string</dd>
+					<dt><var>$protocol</var></dt>
+					<dd><code>mixed</code><br>$protocol string</dd>
+					<dt><var>$destinationPorts</var></dt>
+					<dd><code>mixed</code><br>$destinationPorts string</dd>
+					<dt><var>$description</var></dt>
+					<dd><code>mixed</code><br>$description string</dd>
+				</dl></div>
 
+				<h4>Returns</h4>
+				<div class="list">
+					<code><code><a href="class-Service.html">Service</a></code></code><br />
+				</div>
+
+				<h4>Throws</h4>
+				<div class="list">
+					<code><code><a href="class-Exception.html">Exception</a></code></code><br />
+				</div>
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="API_newService" id="_API_newService">
+
+		<td class="attributes"><code>
+			 public 
+			<code><a href="class-Service.html">Service</a></code>
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_API_newService">#</a>
+		<code><b>API_newService</b>( <span>mixed <var>$name</var></span>, <span>mixed <var>$protocol</var></span>, <span>mixed <var>$destinationPorts</var></span>, <span>mixed <var>$description</var> = <span class="php-quote">''</span></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$name</var></dt>
+					<dd><code>mixed</code><br>$name string</dd>
+					<dt><var>$protocol</var></dt>
+					<dd><code>mixed</code><br>$protocol string</dd>
+					<dt><var>$destinationPorts</var></dt>
+					<dd><code>mixed</code><br>$destinationPorts string</dd>
+					<dt><var>$description</var></dt>
+					<dd><code>mixed</code><br>$description string</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code><code><a href="class-Service.html">Service</a></code></code><br />
+				</div>
+
+				<h4>Throws</h4>
+				<div class="list">
+					<code><code><a href="class-Exception.html">Exception</a></code></code><br />
+				</div>
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="newServiceGroup" id="_newServiceGroup">
+
+		<td class="attributes"><code>
+			 public 
+			<code><a href="class-ServiceGroup.html">ServiceGroup</a></code>
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_newServiceGroup">#</a>
+		<code><b>newServiceGroup</b>( <span>string <var>$name</var></span> )</code>
+
+		<div class="description short">
+			
+<p>Creates a new Service Group named '$name' . Will exit with error if a group
+with that name already exists</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Creates a new Service Group named '$name' . Will exit with error if a group
+with that name already exists</p>
+
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$name</var></dt>
+					<dd><code>string</code><br>$name</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code><code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="API_newServiceGroup" id="_API_newServiceGroup">
+
+		<td class="attributes"><code>
+			 public 
+			<code><a href="class-ServiceGroup.html">ServiceGroup</a></code>
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_API_newServiceGroup">#</a>
+		<code><b>API_newServiceGroup</b>( <span>mixed <var>$name</var></span> )</code>
+
+		<div class="description short">
+			
+<p>Creates a new Service Group named '$name' . Will exit with error if a group
+with that name already exists</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Creates a new Service Group named '$name' . Will exit with error if a group
+with that name already exists</p>
+
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$name</var></dt>
+					<dd><code>mixed</code><br>$name string</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code><code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br />
+				</div>
 
 
 
@@ -1013,14 +1184,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			
+			boolean
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_referencedObjectRenamed">#</a>
-		<code><b>referencedObjectRenamed</b>( <span>mixed <var>$h</var></span>, <span>mixed <var>$oldname</var></span> )</code>
+		<code><b>referencedObjectRenamed</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$h</var></span>, <span>mixed <var>$oldName</var></span> )</code>
 
 		<div class="description short">
 			
@@ -1030,7 +1201,18 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$h</var></dt>
+					<dd><code><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br>$h</dd>
+					<dt><var>$oldName</var></dt>
+					<dd><code>mixed</code><br>$oldName</dd>
+				</dl></div>
 
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
 
 
 
@@ -1042,47 +1224,14 @@
 
 		<td class="attributes"><code>
 			 public 
-			
+			boolean
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
 		<a class="anchor" href="#_inStore">#</a>
-		<code><b>inStore</b>( <span>mixed <var>$object</var></span> )</code>
-
-		<div class="description short">
-			
-<p>returns true if $object is in this store. False if not</p>
-
-		</div>
-
-		<div class="description detailed hidden">
-			
-<p>returns true if $object is in this store. False if not</p>
-
-
-
-
-
-
-
-
-		</div>
-		</div></td>
-	</tr>
-	<tr data-order="regen_Indexes" id="_regen_Indexes">
-
-		<td class="attributes"><code>
-			 protected 
-			
-			
-			</code>
-		</td>
-
-		<td class="name"><div>
-		<a class="anchor" href="#_regen_Indexes">#</a>
-		<code><b>regen_Indexes</b>( )</code>
+		<code><b>inStore</b>( <span><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code> <var>$object</var></span> )</code>
 
 		<div class="description short">
 			
@@ -1092,36 +1241,16 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$object</var></dt>
+					<dd><code><code><a href="class-Service.html">Service</a></code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a></code></code><br>$object</dd>
+				</dl></div>
 
-
-
-
-
-		</div>
-		</div></td>
-	</tr>
-	<tr data-order="add_Obj_inIndex" id="_add_Obj_inIndex">
-
-		<td class="attributes"><code>
-			 protected 
-			
-			
-			</code>
-		</td>
-
-		<td class="name"><div>
-		<a class="anchor" href="#_add_Obj_inIndex">#</a>
-		<code><b>add_Obj_inIndex</b>( <span>mixed <var>$f</var></span>, <span>mixed <var>$index</var></span> )</code>
-
-		<div class="description short">
-			
-		</div>
-
-		<div class="description detailed hidden">
-			
-
-
-
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br />
+				</div>
 
 
 
@@ -1240,7 +1369,7 @@
 				<h4>Parameters</h4>
 				<div class="list"><dl>
 					<dt><var>$base</var></dt>
-					<dd><code>string</code><br>$base</dd>
+					<dd><code>string</code><br>$base * @param bool $nested</dd>
 					<dt><var>$nested</var></dt>
 					<dd><code>string</code><br>$suffix</dd>
 					<dt><var>$suffix</var></dt>
@@ -1362,17 +1491,17 @@
 			</div>
 		</div></td>
 	</tr>
-	<tr data-order="all" id="$all">
+	<tr data-order="_all" id="$_all">
 		<td class="attributes"><code>
 			protected  
 			<code><a href="class-Service.html">Service</a>[]</code>|<code><a href="class-ServiceGroup.html">ServiceGroup</a>[]</code>
 		</code></td>
 
 		<td class="name">
-<var>$all</var>		</td>
+<var>$_all</var>		</td>
 		<td class="value"><code><span class="php-keyword1">Array</span>()</code></td>
 		<td class="description"><div>
-			<a href="#$all" class="anchor">#</a>
+			<a href="#$_all" class="anchor">#</a>
 
 			<div class="description short">
 				
@@ -1439,50 +1568,6 @@
 		<td class="value"><code><span class="php-keyword1">Array</span>()</code></td>
 		<td class="description"><div>
 			<a href="#$_tmpServices" class="anchor">#</a>
-
-			<div class="description short">
-				
-			</div>
-
-			<div class="description detailed hidden">
-				
-
-			</div>
-		</div></td>
-	</tr>
-	<tr data-order="fast" id="$fast">
-		<td class="attributes"><code>
-			protected  
-			array
-		</code></td>
-
-		<td class="name">
-<var>$fast</var>		</td>
-		<td class="value"><code><span class="php-keyword1">Array</span>()</code></td>
-		<td class="description"><div>
-			<a href="#$fast" class="anchor">#</a>
-
-			<div class="description short">
-				
-			</div>
-
-			<div class="description detailed hidden">
-				
-
-			</div>
-		</div></td>
-	</tr>
-	<tr data-order="fastMemToIndex" id="$fastMemToIndex">
-		<td class="attributes"><code>
-			protected  
-			mixed
-		</code></td>
-
-		<td class="name">
-<var>$fastMemToIndex</var>		</td>
-		<td class="value"><code><span class="php-keyword1">null</span></code></td>
-		<td class="description"><div>
-			<a href="#$fastMemToIndex" class="anchor">#</a>
 
 			<div class="description short">
 				
